# cppbackend

./: .gitignore  README.md  cppbackend.code-workspace  prepare_test.sh  requirements.txt  results.xml  server_logging.xml
.github/workflows/: main.yml
.pytest_cache/v/cache/: lastfailed  nodeids
sprint1/problems/async_server/precode/src/: main.cpp
sprint1/problems/async_server/solution/: CMakeLists.txt  build.sh
sprint1/problems/async_server/solution/src/: main.cpp
sprint1/problems/final_task/: CMakeLists.txt
sprint1/problems/final_task/solution/: Dockerfile  build.sh
sprint1/problems/final_task/solution/src/: ReportError.hpp  json_loader.h  model.cpp  request_handler.cpp  request_handler.h  tag_invokers.cpp  tag_invokers.h
sprint1/problems/map_json/precode/: CMakeLists.txt
sprint1/problems/map_json/solution/: CMakeLists.txt
sprint1/problems/map_json/solution/src/: Session.cpp  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h  tag_invokers.cpp  tag_invokers.h
sprint1/problems/radio/precode/: CMakeLists.txt
sprint1/problems/radio/solution/: CMakeLists.txt
sprint1/problems/radio/solution/src/: CMakeLists.txt  main.cpp
sprint1/problems/restaurant_multi_threaded/precode/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/: build.sh
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/precode/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/: CMakeLists.txt
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/: CMakeLists.txt
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sync_server/precode/: CMakeLists.txt
sprint1/problems/sync_server/precode/src/: main.cpp
sprint1/problems/sync_server/solution/: CMakeLists.txt
sprint1/problems/sync_server/solution/src/: Client.cpp  Client.hpp  Server.cpp  Server.hpp  main.cpp
sprint1/samples/asyncop/: CMakeLists.txt  build.sh
sprint1/samples/asyncop/src/: Logger.hpp  main.cpp
sprint1/samples/httpserver/: CMakeLists.txt
sprint1/samples/httpserver/src/: CMakeLists.txt  main.cpp
sprint1/samples/httpserver2/: CMakeLists.txt
sprint1/samples/httpserver2/src/: CMakeLists.txt  main.cpp
sprint1/samples/parser/: CMakeLists.txt
sprint1/samples/parser/src/: main.cpp
sprint1/samples/s1_12/: CMakeLists.txt
sprint1/samples/s1_12/src/: main.cpp
sprint1/samples/s1_13/: CMakeLists.txt
sprint1/samples/s1_13/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt
sprint1/samples/tcp-udp/src/: tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  run.sh
sprint2/problems/command_line/solution/src/: api_handler.cpp  application.cpp  (+10 more)
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/logger/solution/: main.cpp  my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/src/: api_handler.cpp  api_handler.h  application.cpp  json_loader.h  logger.h  main.cpp  model.h  request_handler.h  response_maker.h
sprint2/problems/move_players/solution/src/http_server/: session.h
sprint2/problems/move_players/solution/src/model/: CMakeLists.txt  dog.cpp  dog.h  game.cpp  game.h  game_session.cpp  game_session.h  model.cpp  model.h  model_map.cpp  model_map.h  model_types.h  player.cpp  player.h  token_generator.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile  build.sh
sprint2/problems/static_content/solution/: CMakeLists.txt  test_get.py
sprint2/problems/static_content/solution/src/: ApiRequestHandler.hpp  ApiResponseHandler.hpp  Listener.hpp  Session.hpp  content_type.hpp  json_loader.cpp  main.cpp  request_handler.cpp  request_handler.h  util.cpp  util.h
sprint2/samples/logger/: CMakeLists.txt  main.cpp
sprint2/samples/prom2.2.4/: prometheus.yml  web_exporter.py
sprint3/problems/ammo/solution/: load.yaml
sprint3/problems/find_return/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/flamegraph/solution/: run.sh  shoot.py
sprint3/problems/gather/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/: Dockerfile
sprint3/problems/gen_objects/solution/tests/: CMakeLists.txt
sprint3/problems/htmldecode/solution/: CMakeLists.txt
sprint3/problems/htmldecode/solution/src/: html_decode.cpp  html_decode.h
sprint3/problems/htmldecode/solution/tests/: catch_test_main.cpp
sprint3/problems/load/solution/: load.yaml
sprint3/problems/scores/solution/src/model/: CMakeLists.txt  collector.cpp  dog.cpp  dog.h  game.cpp  game.h  game_object.cpp  game_session.cpp  loot.h  loot_type.h  model_map.cpp  model_map.h  office.h  player.cpp  player.h  player_list.cpp  token_generator.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/static_lib/solution/src/model/: CMakeLists.txt  game.cpp  game_session.cpp  game_session.h  loot_generator.cpp  loot_generator.h  office.h
sprint3/problems/static_lib/solution/tests/: CMakeLists.txt  loot_generator_tests.cpp
sprint3/problems/tv/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/: CMakeLists.txt  build.sh  conanfile.txt
sprint3/problems/urldecode/solution/src/: url_decode.cpp  url_decode.h
sprint3/problems/urldecode/solution/tests/: boost_test_main.cpp  google_test_main.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: build.sh  run.sh  test.sh
sprint4/problems/db_of_books/solution/: CMakeLists.txt  README.md  build.sh  conanfile.txt  main.cpp  run.sh
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile  build.sh  conanfile.txt  run.sh
sprint4/problems/leave_game/solution/src/json_parser/: CMakeLists.txt  tag_invokers.cpp  tag_invokers.h
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile  run.sh  test.sh
sprint4/samples/db/: CMakeLists.txt  main.cpp
(+279 files in other folders)
